--- a/.github/workflows/snowflake-terraform-demo-prod.yml
+++ b/.github/workflows/snowflake-terraform-demo-prod.yml
@@ -13,6 +13,12 @@ jobs:
     permissions:
       pull-requests: write
     steps:
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ap-southeast-2
       - name: Checkout
         uses: actions/checkout@v2   
 
